styles/css/global/sheet.css
/* ... */
.projectfu .sheet-header h4.pronouns {
	background-color: transparent;
	border-color: transparent;
	color: #000000;
	height: 50px;
	border-bottom: 0;
	margin: 0;
}

.projectfu .sheet-header h4.pronouns input {
	color: #ebf7af;
	text-shadow: 1px 1px 1px black;
	width: 100%;
	height: 100%;
	border: 0;
	background-color: transparent;
	text-align: center;
}

.projectfu .sheet-header h4.martials {
	border-bottom: 0;
	display: flex;
	align-items: center;
	/* height: 2em; */
	text-align: center;
	-webkit-box-flex: 1;
	-ms-flex-positive: 1;
	flex-grow: 1;
	/* Martial & Offensive Icon */
}

.projectfu .sheet-header h4.martials img#martial-header,
.projectfu .sheet-header h4.martials img#offensive-header {
	-webkit-box-flex: 0;
	-ms-flex: 0 0 48px;
	flex: 0 0 48px;
	height: 48px;
	-o-object-fit: contain;
	object-fit: contain;
	vertical-align: middle;
	background-position-x: center;
	border: none;
	background-repeat: no-repeat;
	margin: auto;
	opacity: 0.5;
	cursor: pointer;
	transition: opacity 0.7s ease;
}

.projectfu .sheet-header h4.martials img#martial-header.active,
.projectfu .sheet-header h4.martials img#offensive-header.active {
	opacity: 1;
}

.projectfu .sheet-header h4.martials img#martial-header:not(.active):hover,
.projectfu .sheet-header h4.martials img#offensive-header:not(.active):hover {
	opacity: 0.8;
}

.projectfu .fit-desc-row {
	display: flex;
	justify-content: space-between;
	align-items: flex-start;
	gap: 1rem;
	height: 100%;
}

.projectfu .fit-desc {
	flex: 1;
	overflow: hidden;
}

.projectfu .token-profile-img {
	height: 100%;
	width: 5rem;
	-o-object-fit: contain;
	object-fit: contain;
	border: 1px solid #aaa;
	border-radius: 4px;
}

.projectfu .sheet-wrapper {
	display: flex;
	flex-direction: column;
	height: 100%;
	overflow-y: auto;
	/* Sheet Body */
	/* Tabs styling */
	/* Footer styling */
	/* Push the footer to the bottom */
}

.projectfu .sheet-wrapper .sheet-body,
.projectfu .sheet-wrapper .tab {
	flex: 1;
}

.projectfu .sheet-wrapper .sheet-tabs {
	-ms-flex-item-align: stretch;
	align-self: stretch;
	margin-block: auto;
}

.projectfu .sheet-wrapper > footer {
	margin-top: auto;
}

.projectfu.sheet.character,
.projectfu.sheet.npc {
	.body-section {
		gap: 5px;
		display: flex;
		flex: 1 1 auto;
		overflow-y: auto;

		main {
			flex: 1 1 auto;
			gap: 5px;
			overflow-y: auto;
		}

		aside {
			display: flex;
			flex-direction: column;
			flex: 0 0 auto;
			justify-content: start;
			align-items: start;
			text-align: center;
			overflow-y: auto;
			overflow-x: hidden;
			gap: 5px;
			> * {
				width: 100%;
			}
			.effects-section {
				[data-effect-id] {
					a[data-link][data-type='Item'] {
						flex: 0 1 max-content;
					}
				}
			}
		}

		.favorites-section {
			min-height: 12rem;
			overflow-y: auto;
			flex: 1 1 auto;

			.favorites-table .fu-table__header {
				position: sticky;
				top: 0;
			}
		}
	}

	&.npc .body-section {
		aside .villain-section {
			flex: 0 1 auto;
			.resource-content:has(input) {
				width: 5rem;
			}
		}

		main {
			.biography-section {
				min-height: 4rem;
				flex: 1 1 auto;
				font-size: var(--font-size-base);
				overflow-y: auto;

				&:has(prose-mirror[name='system.description']) {
					min-height: max-content;
				}

				prose-mirror[name='system.description'] {
					min-height: 8rem;
					&.active {
						min-height: 12rem;
					}
				}
			}

			.favorites-section {
				min-height: 8rem;
				overflow-y: auto;
				flex: 1 1 auto;

				.favorites-table .fu-table__header {
					position: sticky;
					top: 0;
				}
			}
		}
	}
}

.projectfu .section-container {
	margin: 0;
}

/* ----------------------------------------- */
/* Resources Styles
  /* ----------------------------------------- */
.projectfu .title-fieldset {
	border-radius: 10px;
}

.projectfu .title-fieldset legend {
	display: flex;
	border-radius: 10px;
	margin: 0 auto;
	padding: 2px 10px;
	background: var(--color-primary);
	color: #ebf7af;
	position: relative;
	text-align: center;
	width: auto;
	border: 0.01em solid #148782;
}

/* Legend when fieldset or legend has .disabled */
.projectfu .title-fieldset legend.untoggled {
	background-color: var(--color-button-disabled-bg);
	border-color: var(--color-text-disabled);
}

.projectfu .title-fieldset legend.toggled {
	background: #3a6b5d;
	color: #ffffff;
	transition: background 0.2s;
}

.projectfu .title-fieldset div.untoggled {
	opacity: 0.5;
	pointer-events: none;
}

.projectfu textarea {
	text-align: left;
	font-size: var(--font-size-small);
	padding: 0.313rem 0.5rem;
	margin: 5px 0;
	box-shadow: 1px 2px var(--color-primary);
	background: linear-gradient(to bottom, rgb(212, 231, 232), rgba(195, 219, 214, 0.7));
	border-radius: 3px;
	font-family: var(--font-primary);
	font-size: var(--font-size-base);
}

.projectfu .blur {
	background-color: rgba(20, 30, 40, 0.6);
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	z-index: -50;
	backdrop-filter: var(--pfu-backdrop-filter);
	border-radius: var(--pfu-border-radius-small);
}

.projectfu .resource-content {
	color: var(--pfu-color-app-section-content-secondary);
	background-color: transparent;
}

.projectfu .resource-content .resource-label-sm.summary {
	margin: 0 0.5em;
}

.projectfu .resource-content .resource-inputs {
	color: #ebf7af;
	background-color: var(--color-primary);
	border: thin solid var(--color-primary);
	width: 4em;
	height: auto;
	padding: 0;
	justify-content: center;
	text-align: center;
	border-color: var(--color-primary);
	border-radius: 5px;
}

.projectfu .resource-content .resource-inputs input {
	height: 2em;
	text-decoration-line: underline;
}

.projectfu .resource-content .resource-inputs option {
	background-color: var(--color-primary);
	color: #ebf7af;
}

.projectfu .resource-content .resource-inputs input.charname-resource-inputs {
	color: #ebf7af;
	background-color: transparent;
	border: transparent;
}

.projectfu .resource-content .resource-inputs.bonus {
	width: calc(100% - 2px);
}
/* ... */

